force-app/main/default/objects/LLC_BI__Policy_Exception_Template__c/fields/LLC_BI__Active__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Active__c</fullName>
    <description>This field is a formula field that is automatically populated depending on the Start and End dates selected for the exception template&apos;s creation. If active, this field Indicates the template may be used for new policy exceptions. To be active, the template record must have a start day of today&apos;s date or a date in the past; specify no end date if the template should be continued indefinitely, or an end date in the future.</description>
    <formula>(LLC_BI__Start_Date__c &lt;= TODAY()) &amp;&amp; (ISBLANK(LLC_BI__End_Date__c) || LLC_BI__End_Date__c &gt;= TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>