force-app/main/default/objects/LLC_BI__Policy_Exception_Template__c/fields/LLC_BI__Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Description__c</fullName>
    <description>This field is a free form text box. It is optional and is used to specify the description of the policy exception template.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>