force-app/main/default/objects/LLC_BI__Policy_Exception_Template__c/fields/LLC_BI__End_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__End_Date__c</fullName>
    <description>This field is optional and is used to specify the last date on which the template may be used. This field helps drive the behavior for the &quot;Active&quot; field.  After this date the template will no longer be considered as active and the user cannot create a new policy exception using the template. If the end date is not specified the policy exception template will be considered active as long as it has a valid start date.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>