force-app/main/default/objects/LLC_BI__Policy_Exception_Template__c/fields/LLC_BI__Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Type__c</fullName>
    <description>This field is required and drives the filtering functionality for the user when they are applying policy exceptions. It specifies the type of the policy exception the user is applying. This is a picklist and the options can be edited to include all policy exception types pertinent to the financial institution&apos;s business practices.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Collateral</fullName>
            </value>
            <value>
                <fullName>Covenant</fullName>
            </value>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>Regulatory</fullName>
            </value>
            <value>
                <fullName>Underwriting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>